--- a/apps/main/src/styles.css
+++ b/apps/main/src/styles.css
@@ -2,3 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 /* You can add global styles to this file, and also import other style files */
+@layer utilities {
+  .animate-gradient {
+    animation: gradient 15s ease infinite;
+  }
+}
+
+@keyframes gradient {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
